# fastapi_basic

./: .gitignore  Makefile  README.md  TODO  celery_config.py  config.py  main.py  pyproject.toml  routers.py
models/: __init__.py  database.py  products.py
routers/: __init__.py  auth.py  products.py
schemas/: __init__.py  products.py
tasks/: __init__.py  send_email123.py  send_mail.py
utils/: orm_.py
